proff of concept for quote animation

--- a/css/main.scss
+++ b/css/main.scss
@@ -62,5 +62,6 @@ $pink-color: rgb(200,30,80);
         "menu",
         "syntax-highlighting",
         "about",
-        "refme"
+        "refme",
+        "words"
 ;
